css alignment fixes

--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,6 @@ button:focus {outline:0;}
 }
 
 #logo-subtitle{
-  margin-left: 30px;
   margin-right: 30px;
   font-size: 16px;
 }
